syntax = "proto3";
package schema.v2;

message ProjectGenerateReport {
	int32 project_generate_queue_id = 1;
	int32 project_id = 2;

	oneof state {
		Progress progress = 3;
		Error error = 4;
	}

	message Progress {
		string message = 1;
	}

	message Error {
		string message = 1;
	}
}
message ProjectGenerateProgress {
	int32 project_generate_queue_id = 1;
	string status_key = 2;
	int64 event_timestamp = 3;  // Unix time in seconds
}
